# chav

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chav/: __init__.py  cli.py  config.py  engine.py  main.py  report.py  typing.py
chav/profiling/: column_profile.py  compare_profile.py  dataset_profile.py
chav/rules/: __init__.py  base.py  category_explosion.py  conditional_drift.py  constant_features.py  drift_risk.py  duplicate_ingestion.py  feature_instability.py  hidden_redundancy.py  id_like_features.py  imbalance.py  label_leakage.py  missing_explosion.py  structural_missingness.py  temporal_inconsistency.py
chav/schemas/: __init__.py  report.py
chav/utils/: formatting.py  stats.py  type_inference.py
tests/: conftest.py  test_api.py  test_cli.py  test_rules.py
