[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chav"
version = "0.1.0"
description = "Lightweight diagnostic engine for tabular datasets"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.22", "python-multipart>=0.0.6"]
dev = ["pytest>=7.0", "httpx>=0.24", "fastapi>=0.100", "uvicorn>=0.22", "python-multipart>=0.0.6"]

[tool.setuptools.packages.find]
include = ["chav*"]
