[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chav"
version = "0.1.0"
description = "Lightweight diagnostic engine for tabular datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Baran Yalcin"}]
keywords = ["data-quality", "diagnostics", "tabular", "pandas", "data-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]

[project.scripts]
chav = "chav.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/baranylcn/chav"
Repository = "https://github.com/baranylcn/chav"
Issues = "https://github.com/baranylcn/chav/issues"

[project.optional-dependencies]
server = ["fastapi>=0.135.3", "uvicorn>=0.22", "python-multipart>=0.0.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "fastapi>=0.135.3",
    "uvicorn>=0.22",
    "python-multipart>=0.0.6",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
    "pandas-stubs>=1.5",
    "openpyxl>=3.0",
]

[tool.setuptools.packages.find]
include = ["chav*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["chav"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*", "pydantic.*", "fastapi.*", "fastapi.responses.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
